src/main/java/com/github/michaellazar/gemini_plugin/Gemini.bnf
{
  parserClass="com.github.michaellazar.gemini_plugin.parser.GeminiParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Gemini"
  psiImplClassSuffix="Impl"
  psiPackage="com.github.michaellazar.gemini_plugin.psi"
  psiImplPackage="com.github.michaellazar.gemini_plugin.psi.impl"

  elementTypeHolderClass="com.github.michaellazar.gemini_plugin.psi.GeminiTypes"
  elementTypeClass="com.github.michaellazar.gemini_plugin.psi.GeminiElementType"
  tokenTypeClass="com.github.michaellazar.gemini_plugin.psi.GeminiTokenType"
}

geminiFile ::= line*

line ::= (h3|h2|h1|quote|ulist|link|pre|plaintext)

h1 ::= H1_HEADER description?
h2 ::= H2_HEADER description?
h3 ::= H3_HEADER description?
quote ::= QUOTE_HEADER description?
ulist ::= ULIST_HEADER description?
link ::= LINK_HEADER LINK_URL description?
pre ::= PRE_HEADER PRE_ALT? PRE_TEXT* PRE_FOOTER?
plaintext ::= PLAIN_HEADER PLAIN_TEXT?

description ::= (H1_TEXT|H2_TEXT|H3_TEXT|QUOTE_TEXT|ULIST_TEXT|LINK_TEXT)
